--- a/.sample.env
+++ b/.sample.env
@@ -1,3 +1,10 @@
 export SLACK_TOKEN=
 export SLACK_APP_TOKEN=
 export SLACK_SIGNING_SECRET=
+export AUTH0_SECRET=
+export AUTH0_BASE_URL=
+export AUTH0_CLIENT_ID=
+export AUTH0_CLIENT_SECRET=
+export AUTH0_ISSUER_BASE_URL=
+export AUTH0_ISSUER_AUDIENCE=
+export QARROT_GENERAL_HOSTNAME=
