--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-with-slack",
+  "name": "express-with-slack-and-auth0",
   "version": "1.0.0",
   "description": "Express app with slack and auth0 login",
   "main": "app.js",
@@ -13,6 +13,7 @@
     "@slack/bolt": "^3.12.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-openid-connect": "^2.8.0",
     "slack-block-builder": "^2.6.0"
   }
 }
