slack oauth token and redirect to auth0 login

--- a/.sample.env
+++ b/.sample.env
@@ -1,6 +1,9 @@
 export SLACK_TOKEN=
 export SLACK_APP_TOKEN=
 export SLACK_SIGNING_SECRET=
+export STATE_SECRET=
+export SLACK_CLIENT_ID=
+export SLACK_CLIENT_SECRET=
 export AUTH0_SECRET=
 export AUTH0_BASE_URL=
 export AUTH0_CLIENT_ID=
@@ -8,3 +11,8 @@ export AUTH0_CLIENT_SECRET=
 export AUTH0_ISSUER_BASE_URL=
 export AUTH0_ISSUER_AUDIENCE=
 export QARROT_GENERAL_HOSTNAME=
+export DB_NAME=
+export DB_USERNAME=
+export DB_PASSWORD=
+export ADMIN_SCOPE=
+export BOT_SCOPE=
