--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
+    "mongoose": "^6.6.0",
     "slack-block-builder": "^2.6.0"
   }
 }
