--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@slack/bolt": "^3.12.1",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-openid-connect": "^2.8.0",
     "mongoose": "^6.6.0",
