--- a/.sample.env
+++ b/.sample.env
@@ -6,6 +6,7 @@ export SLACK_CLIENT_ID=
 export SLACK_CLIENT_SECRET=
 export AUTH0_SECRET=
 export AUTH0_BASE_URL=
+export AUTH0_LOGIN_URL=
 export AUTH0_CLIENT_ID=
 export AUTH0_CLIENT_SECRET=
 export AUTH0_ISSUER_BASE_URL=
